; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/nvidia/extr_tegra_sdhci.c_tegra_sdhci_write_1.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/nvidia/extr_tegra_sdhci.c_tegra_sdhci_write_1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sdhci_slot = type { i32 }
%struct.tegra_sdhci_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.sdhci_slot*, i32, i32)* @tegra_sdhci_write_1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tegra_sdhci_write_1(i32 %0, %struct.sdhci_slot* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.sdhci_slot*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.tegra_sdhci_softc*, align 8
  store i32 %0, i32* %5, align 4
  store %struct.sdhci_slot* %1, %struct.sdhci_slot** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call %struct.tegra_sdhci_softc* @device_get_softc(i32 %10)
  store %struct.tegra_sdhci_softc* %11, %struct.tegra_sdhci_softc** %9, align 8
  %12 = load %struct.tegra_sdhci_softc*, %struct.tegra_sdhci_softc** %9, align 8
  %13 = getelementptr inbounds %struct.tegra_sdhci_softc, %struct.tegra_sdhci_softc* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @bus_write_1(i32 %14, i32 %15, i32 %16)
  ret void
}

declare dso_local %struct.tegra_sdhci_softc* @device_get_softc(i32) #1

declare dso_local i32 @bus_write_1(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
